welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:23: error: ':' expected but ')' found.
def isFacingTrail(couleur):Boolean = {
                         ^SlugSnail:43: error: identifier expected but '}' found.
}
^